--- a/QuickApp/ClientApp/angular.json
+++ b/QuickApp/ClientApp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "620aee4b-4fc2-479c-92f6-f71310040f9f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
